Filtrer bort arbeidsmarkedstiltak helt fra arena/tiltak endepunkt